--- a/pages/index.html
+++ b/pages/index.html
@@ -3,12 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1"> <!-- レスポンシブ用 -->
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"> <!-- font-awesome -->
+	<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"> font-awesome -->
 	<link rel="stylesheet" href="../assets/css/app.css"><!-- CSSパス指定 -->
 	<script src="../assets/js/jquery-3.2.1.min.js"></script>
+	<title>サンプルページ</title>
 </head>
-
 <body>
+	<header>
+		<div class="logo">
+			<a href="index.html"><img src="images/logo.png" alt="SNAPPERS"></a>
+		</div>
+		<nav class="global-nav">
+			<ul>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
 
+	<div id="wrap">
+		<div class="content">
+
+		</div>
+	</div>
+
+	<footer>
+		<a href="index.html">
+			<small>©<span id="this_year">2018</span>　Hattri-studio.</small>
+		</a>
+	</footer>
 </body>
 </html>
