--- a/pages/common.html
+++ b/pages/common.html
@@ -6,9 +6,9 @@
 	<!-- <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet"> font-awesome -->
 	<link rel="stylesheet" href="../assets/css/app.css"><!-- CSSパス指定 -->
 	<script src="../assets/js/jquery-3.2.1.min.js"></script>
-<title>サンプルページ</title>
+	<title>サンプルページ</title>
 </head>
-<body id="index">
+<body>
 	<header>
 		<div class="logo">
 			<a href="index.html"><img src="images/logo.png" alt="SNAPPERS"></a>
@@ -24,16 +24,11 @@
 
 	<div id="wrap">
 		<div class="content">
-			<h1 class="index_title">Life is beautiful, Snap!Snap!</h1>
-			<p>
-				このWebサイトは、学習用サンプルとして作成する「SNAPPERS」という架空の写真家のポートフォリオサイトです。<br>
-				チュートリアル形式でHTMLとCSSを学びながら完成を目指します。楽しんで作成しましょう。
-			</p>
-			<p class="btn"><a href="portfolio.html">My Portfolio</a></p>
+			
 		</div>
 	</div>
 
-	<footer class="index_footer">
+	<footer>
 		<a href="index.html">
 			<small>©<span id="this_year">2018</span>　Hattri-studio.</small>
 		</a>
