--- a/pages/common.html
+++ b/pages/common.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="../assets/css/app.css"><!-- CSSパス指定 -->
 	<script src="../assets/js/jquery-3.2.1.min.js"></script>
 	<title>サンプルページ</title>
+	<link rel="shortcut icon" href="../favicon.ico">
 </head>
 <body>
 	<header>
